fix: spacing

--- a/src/components/annual-report/reportTables.module.css
+++ b/src/components/annual-report/reportTables.module.css
@@ -1,7 +1,3 @@
-.tableContainer {
-    margin-bottom: 16px;
-}
-
 .reportTable td,
 .reportTable th {
     border: 1px solid var(--colors-grey400);
